--- a/Public/index.html
+++ b/Public/index.html
@@ -5,13 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ATSO</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./main.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="tab" href="./favicon.ico" type="image/x-icon">
   </head>
+  <div class="sidebar">
+    <div class="sidebar-item"><a class="active-link" href="#" target="_blank">Home</a></div>
+    <div class="sidebar-item"><a href="#" target="_blank">Resources</a></div>
+    <div class="sidebar-item"><a href="#" target="_blank">Members</a></div>
+    <div class="sidebar-item"><a href="#" target="_blank">Web Report</a></div>
+    <div class="sidebar-item"><a href="#" target="_blank">Site Checker</a></div>
+    <div class="sidebar-item"><a href="#" target="_blank">Code Blocks</a></div>
+    <div class="sidebar-item"><a href="#" target="_blank">Events</a></div>
+
+
+  </div>
   <body>
     <main>
-        <h1>ATSO</h1>  
+        <h1>Accessible Technology</h1>
+        <h2>Student Organization</h2>
+        <p>Our mission...
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </main>
 	<script src="index.js"></script>
   </body>
