added more html files

--- a/Public/code-blocks.html
+++ b/Public/code-blocks.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="./main.css">
   </head>
   <div class="sidebar" id="sidebar">
-    <div class="sidebar-item"><a class="active-link" href="index.html" onclick="changeTab('Home')">Home</a></div>
+    <div class="sidebar-item"><a href="index.html" onclick="changeTab('Home')">Home</a></div>
     <div class="sidebar-item"><a href="resources.html" onclick="changeTab('Resources')">Resources</a></div>
     <!-- <div class="sidebar-item"><a href="members.html" onclick="changeTab('Members')">Members</a></div> -->
     <!-- <div class="sidebar-item"><a href="web-report.html" onclick="changeTab('Web Report')">Web Report</a></div> -->
     <!-- <div class="sidebar-item"><a href="site-checker.html" onclick="changeTab('Site Checker')">Site Checker</a></div> -->
-    <div class="sidebar-item"><a href="code-blocks.html" onclick="changeTab('Code Blocks')">Code Blocks</a></div>
+    <div class="sidebar-item"><a class="active-link" href="code-blocks.html" onclick="changeTab('Code Blocks')">Code Blocks</a></div>
     <div class="sidebar-item"><a href="events.html" onclick="changeTab('Events')">Events</a></div>
     <div class="sidebar-item" id="contact-us-item"><button>Contact Us</button></div>
 
