--- a/Public/events.html
+++ b/Public/events.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./main.css">
   </head>
   <div class="sidebar" id="sidebar">
-    <div class="sidebar-item"><a class="active-link" href="index.html" onclick="changeTab('Home')">Home</a></div>
+    <div class="sidebar-item"><a href="index.html" onclick="changeTab('Home')">Home</a></div>
     <div class="sidebar-item"><a href="resources.html" onclick="changeTab('Resources')">Resources</a></div>
     <!-- <div class="sidebar-item"><a href="members.html" onclick="changeTab('Members')">Members</a></div> -->
     <!-- <div class="sidebar-item"><a href="web-report.html" onclick="changeTab('Web Report')">Web Report</a></div> -->
     <!-- <div class="sidebar-item"><a href="site-checker.html" onclick="changeTab('Site Checker')">Site Checker</a></div> -->
     <div class="sidebar-item"><a href="code-blocks.html" onclick="changeTab('Code Blocks')">Code Blocks</a></div>
-    <div class="sidebar-item"><a href="events.html" onclick="changeTab('Events')">Events</a></div>
+    <div class="sidebar-item"><a class="active-link" href="events.html" onclick="changeTab('Events')">Events</a></div>
     <div class="sidebar-item" id="contact-us-item"><button>Contact Us</button></div>
 
 
@@ -22,10 +22,13 @@
   </div>
   <body>
     <main>
-        <h1>Accessible Technology</h1>
-        <h2>Student Organization</h2>
-        <p>Our mission...
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h1>Events</h1>
+
+        <div class="event-div">
+          <h2>No Mouse Challenge</h2>
+          <p>Our mission...
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
     </main>
 	<script src="sidebar.js"></script>
   </body>
