--- a/Public/code-blocks.html
+++ b/Public/code-blocks.html
@@ -22,10 +22,17 @@
   </div>
   <body>
     <main>
-        <h1>Accessible Technology</h1>
-        <h2>Student Organization</h2>
-        <p>Our mission...
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h1>Code Blocks</h1>
+        <p style="text-align: center">Need accessible code assets? We've got you...</p>
+
+        <div class="code-block-div">
+          <h2>Accessible Button</h2>
+
+          <div class="live-html-asset-block">
+
+          </div>
+          <p>This button is able to blah blah blah blah blah blah blah </p>
+        </div>
     </main>
 	<script src="sidebar.js"></script>
   </body>
