--- a/Public/code-blocks.html
+++ b/Public/code-blocks.html
@@ -27,13 +27,19 @@
 
         <div class="code-block-div">
           <h2>Accessible Button</h2>
-
-          <div class="live-html-asset-block">
-
+          <div class="two-column">
+            <div class="live-html-asset-block">
+              <button class="live-html-asset-accessible-button">Submit</button>
+            </div>
+            <p>This button achieves accessibility through it's high contrast label, selection colors for tab navigations and ...</p>
           </div>
-          <p>This button is able to blah blah blah blah blah blah blah </p>
+          <h3>HTML</h3>
+          <pre>
+            <code>&lt;button class="live-html-asset-accessible-button"&gt;Submit&lt;/button&gt;</code>
+          </pre>
         </div>
     </main>
 	<script src="sidebar.js"></script>
+	<script src="accissble-assets.js"></script>
   </body>
 </html>
