--- a/Public/code-blocks.html
+++ b/Public/code-blocks.html
@@ -36,10 +36,18 @@
           <h3>HTML</h3>
           <pre>
             <code>&lt;button class="live-html-asset-accessible-button"&gt;Submit&lt;/button&gt;</code>
+              
+              <img class="copy-image" src="Assets/copy.png" onclick="copyText('text')">
+          </pre>
+          <h3>CSS</h3>
+          <pre>
+            <code>.live-html-asset-accessible-button:hover,<br>.live-html-asset-accessible-button::selection {<br>box-shadow: black 3px 3px;<br>}<br>.live-html-asset-accessible-button:active {<br>box-shadow: none;<br>}</code>
+            <img class="copy-image" src="Assets/copy.png">
           </pre>
         </div>
     </main>
 	<script src="sidebar.js"></script>
 	<script src="accissble-assets.js"></script>
+	<script src="app.js"></script>
   </body>
 </html>
